[tool.poetry]
name = "rsabot"
version = "0.1.0"
description = ""
authors = ["Liliam Jean-Baptiste <liliam.jean-baptiste@epita.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
